@@ -17,6 +17,7 @@
 package org.graylog2.rest.resources.users;
 
 import com.google.common.collect.ImmutableSet;
+import jakarta.ws.rs.BadRequestException;
 import jakarta.ws.rs.ForbiddenException;
 import jakarta.ws.rs.core.Response;
 import org.apache.shiro.mgt.DefaultSecurityManager;
@@ -48,6 +49,7 @@ import org.graylog2.shared.users.Role;
 import org.graylog2.shared.users.UserManagementService;
 import org.graylog2.shared.users.UserService;
 import org.graylog2.users.PaginatedUserService;
+import org.graylog2.users.PasswordComplexityConfig;
 import org.graylog2.users.RoleService;
 import org.graylog2.users.UserConfiguration;
 import org.graylog2.users.UserImpl;
@@ -137,6 +139,7 @@ public class UsersResourceTest {
         usersResource = new TestUsersResource(userManagementService, paginatedUserService, accessTokenService,
                 roleService, sessionService, new HttpConfiguration(), subject,
                 sessionTerminationService, securityManager, globalAuthServiceConfig, clusterConfigService, userService);
+        when(clusterConfigService.get(PasswordComplexityConfig.class)).thenReturn(PasswordComplexityConfig.DEFAULT);
     }
 
     /**
@@ -155,17 +158,39 @@ public class UsersResourceTest {
         when(userService.loadById("creator")).thenReturn(creator);
         when(subject.getPrincipal()).thenReturn(creator.getName());
 
-        final Response response = usersResource.create(buildCreateUserRequest(List.of(TestUsersResource.ALLOWED_ROLE)));
+        final Response response = usersResource.create(buildCreateUserRequest(List.of(TestUsersResource.ALLOWED_ROLE), PASSWORD));
         Assert.assertEquals(201, response.getStatus());
         verify(userManagementService).create(isA(UserImpl.class), eq(creator));
     }
 
     @Test
-    public void createFailureOnMissingRoleAssignPermission() throws ValidationException {
+    public void createFailureOnMissingRoleAssignPermission() {
         String testRole = "forbiddenRole";
         when(userManagementService.create()).thenReturn(userImplFactory.create(new HashMap<>()));
         when(clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES)).thenReturn(UserConfiguration.DEFAULT_VALUES);
-        assertThrows(ForbiddenException.class, () -> usersResource.create(buildCreateUserRequest(List.of(testRole))));
+        assertThrows(ForbiddenException.class, () -> usersResource.create(buildCreateUserRequest(List.of(testRole), PASSWORD)));
+    }
+
+    @Test
+    public void createFailurePasswordLength() {
+        when(clusterConfigService.get(PasswordComplexityConfig.class)).thenReturn(PasswordComplexityConfig.DEFAULT);
+        assertThrows(BadRequestException.class, () -> usersResource.create(buildCreateUserRequest(Collections.emptyList(), "pW1&")));
+    }
+
+    @Test
+    public void createFailurePasswordCasing() {
+        when(clusterConfigService.get(PasswordComplexityConfig.class)).thenReturn(new PasswordComplexityConfig(
+                6, true, false, false, false
+        ));
+        assertThrows(BadRequestException.class, () -> usersResource.create(buildCreateUserRequest(Collections.emptyList(), "lowercase1&")));
+    }
+
+    @Test
+    public void createFailurePasswordSpecialChars() {
+        when(clusterConfigService.get(PasswordComplexityConfig.class)).thenReturn(new PasswordComplexityConfig(
+                6, false, false, false, true
+        ));
+        assertThrows(BadRequestException.class, () -> usersResource.create(buildCreateUserRequest(Collections.emptyList(), "passWORD123")));
     }
 
     @Test
@@ -271,8 +296,8 @@ public class UsersResourceTest {
         }
     }
 
-    private CreateUserRequest buildCreateUserRequest(List<String> roles) {
-        return CreateUserRequest.create(USERNAME, PASSWORD, EMAIL,
+    private CreateUserRequest buildCreateUserRequest(List<String> roles, String password) {
+        return CreateUserRequest.create(USERNAME, password, EMAIL,
                 FIRST_NAME, LAST_NAME, Collections.singletonList(""),
                 TIMEZONE, SESSION_TIMEOUT,
                 startPage, roles, false);
